--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
       @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
       @import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap");
     </style>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/@justinribeiro/lite-youtube@1/lite-youtube.min.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
