--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo_arti.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Artimañas 2024" />
+    <meta
+      property="og:description"
+      content="Presentación de trabajos finales de Taller de Producción Final, Multimedia FDA-UNLP"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo_arti192.svg" />
+    <meta property="og:url" content="https://tusitio.com" />
+    <meta property="og:type" content="website" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_arti192.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/logo_arti512.svg" />
