Added Meta data, missing photos and fixed a tiny bug with the image slider link.

--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,46 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo_arti.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta name="title" content="Artimañas 2024" />
+    <meta
+      name="description"
+      content="Presentación de trabajos finales de Taller de Producción Final, Multimedia FDA-UNLP."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://taller5.ludic.cc/artimanias/2024/"
+    />
     <meta property="og:title" content="Artimañas 2024" />
     <meta
       property="og:description"
-      content="Presentación de trabajos finales de Taller de Producción Final, Multimedia FDA-UNLP"
+      content="Presentación de trabajos finales de Taller de Producción Final, Multimedia FDA-UNLP."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/logo_arti192.svg" />
-    <meta property="og:url" content="https://tusitio.com" />
-    <meta property="og:type" content="website" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_arti192.svg" />
-    <link rel="manifest" href="%PUBLIC_URL%/logo_arti512.svg" />
+    <meta
+      property="og:image"
+      content="https://taller5.ludic.cc/artimanias/2024/logo_arti.svg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://taller5.ludic.cc/artimanias/2024/"
+    />
+    <meta property="twitter:title" content="Artimañas 2024" />
+    <meta
+      property="twitter:description"
+      content="Presentación de trabajos finales de Taller de Producción Final, Multimedia FDA-UNLP."
+    />
+    <meta
+      property="twitter:image"
+      content="https://taller5.ludic.cc/artimanias/2024/logo_arti.svg"
+    />
+    <meta property="theme-color" content="#F85031" />
+    <meta property="background-color" content="#1778F3" />
     <title>Artimañas 2024</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
